--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,3 +4,6 @@ parameters:
         - %currentWorkingDirectory%/src/
     checkGenericClassInNonGenericObjectType: false
     checkMissingIterableValueType: false
+
+    ignoreErrors:
+        - '#Match expression does not handle remaining value: string#'
