--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "gacela-project/router",
     "type": "library",
     "require": {
-        "php": ">=8.0.2"
+        "php": ">=8.0.2",
+        "gacela-project/resolver": "^0.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.16",
