--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">=8.0.2",
-        "gacela-project/resolver": "^0.2"
+        "gacela-project/container": "^0.3"
     },
     "require-dev": {
         "ext-mbstring": "*",
