--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: 8.0
-          coverage: none
+          coverage: xdebug
           tools: composer
 
       - name: Get composer cache directory
