--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,4 +143,4 @@ jobs:
         run: composer install --no-interaction --no-ansi --no-progress
 
       - name: Run mutation tests
-        run: ./vendor/bin/infection  --show-mutations --threads=$(nproc)
+        run: ./vendor/bin/infection  --show-mutations --threads=$(nproc) --min-msi=100 --min-covered-msi=100
