--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,6 @@
         "phpstan": "XDEBUG_MODE=off ./vendor/bin/phpstan analyze",
         "csfix": "XDEBUG_MODE=off ./vendor/bin/php-cs-fixer fix",
         "csrun": "XDEBUG_MODE=off ./vendor/bin/php-cs-fixer fix --dry-run",
-        "infection": "XDEBUG_MODE=coverage ./vendor/bin/infection  --show-mutations --threads=$(nproc) --min-msi=100 --min-covered-msi=100"
+        "infection": "XDEBUG_MODE=coverage ./vendor/bin/infection  --show-mutations --threads=$(nproc 2> /dev/null || sysctl -n hw.logicalcpu) --min-msi=100 --min-covered-msi=100"
     }
 }
