--- a/infection.json5
+++ b/infection.json5
@@ -1,7 +1,7 @@
 {
     $schema: 'vendor/infection/infection/resources/schema.json',
     logs: {
-        html: 'mutation-report.html',
+        html: 'data/mutation-report.html',
         stryker: {
             "report": "main"
         }
