--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
     "require-dev": {
         "ext-mbstring": "*",
         "friendsofphp/php-cs-fixer": "^3.16",
+        "gacela-project/gacela": "^1.3",
         "infection/infection": "^0.26",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.6",
         "psalm/plugin-phpunit": "^0.18",
         "symfony/var-dumper": "^5.4",
         "vimeo/psalm": "^5.11"
+    },
+    "suggest": {
+        "gacela-project/gacela": "^1.3"
     },
     "config": {
         "platform": {
