--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
       fail-fast: false
       matrix:
         dependencies: [ "locked", "highest" ]
-        php-version: [ "8.1", "8.2", "8.3" ]
+        php-version: [ "8.1", "8.2", "8.3", "8.4" ]
         operating-system:
           - "ubuntu-latest"
     steps:
